compiler/tests/fail/slh/x86-64/if_wrong_update.jazz
export
fn main() -> reg u64 {
    reg u64 msf;

    msf = #init_msf();

    inline bool b;
    b = msf == 0;
    if (b) {
        msf = #update_msf(!b, msf);
    }

    return msf;
}
